--- a/folder/templates/new_account.html
+++ b/folder/templates/new_account.html
@@ -12,7 +12,7 @@
       Welcome, <span class="text-indigo-400">{{ name }}</span>!<br />
       Your face has been saved successfully for future logins.
     </p>
-    <img src="{{ url_for('static', filename='new_user_icon.png') }}" alt="New User Icon" class="mx-auto mb-8 w-24 h-24 rounded-full border-4 border-green-400" />
+    <img src="landscape_comp.jpeg" alt="New User Icon" class="mx-auto mb-8 w-24 h-24 rounded-full border-4 border-green-400" />
 
     <a href="/" class="inline-block bg-green-600 hover:bg-green-700 px-6 py-3 rounded font-semibold transition">
       Go to Home / Scan Again
