--- a/folder/templates/account.html
+++ b/folder/templates/account.html
@@ -9,7 +9,7 @@
   <div class="max-w-md w-full bg-gray-900 rounded-lg shadow-lg p-8 text-center">
     <h1 class="text-4xl font-bold mb-4">Welcome Back!</h1>
     <p class="text-xl mb-8">Hello, <span class="text-indigo-400">{{ name }}</span>. Great to see you again.</p>
-    <img src="{{ url_for('static', filename='user_icon.png') }}" alt="User Icon" class="mx-auto mb-8 w-24 h-24 rounded-full border-4 border-indigo-500" />
+    <img src="{{url_for('static', filename='landscape_comp.jpeg')}}" alt="User Icon" class="mx-auto mb-8 w-24 h-24 rounded-full border-4 border-indigo-500" />
     
     <a href="/" class="inline-block bg-indigo-600 hover:bg-indigo-700 px-6 py-3 rounded font-semibold transition">
       Log Out / Scan Another Face
