--- a/folder/templates/index.html
+++ b/folder/templates/index.html
@@ -45,7 +45,7 @@
     <div class="text-white">NAVI</div>
     <div class="space-x-8">
       <a href="/" class="text-white hover:text-gray-400 transition">How It Works</a>
-      <a href="/get-started" class="text-white hover:text-gray-400 transition">Get Started</a>
+      <a href="/get-started" class="text-white hover:text-gray-400 transition">Our Mission</a>
       <a href="/demo" class="text-white hover:text-gray-400 transition">Demo</a>
     </div>
   </nav>
