--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,8 @@
     <div class="text-white">NAVI</div>
     <div class="space-x-8">
       <a href="#how-it-works" class="text-white hover:text-gray-400 transition">How It Works</a>
-      <a href="GetStarted.html" class="text-white hover:text-gray-400 transition">Get Started</a>
-      <a href="Demo.html" class="text-white hover:text-gray-400 transition">Demo</a>
+      <a href="ourGoal.html" class="text-white hover:text-gray-400 transition">Our Goal</a>
+      <a href="getStarted.html" class="text-white hover:text-gray-400 transition">Get Started</a>
     </div>
   </nav>
 
@@ -106,7 +106,7 @@
       <div class="black-box text-white text-lg">
         Ready to step into the future of motion and voice-activated control? Click 'Get Started' to begin your journey with NAVI!
       </div>
-      <a href="naviExecution.html">
+      <a href="getStarted.html">
         <button class="mt-4 bg-[#4f4d4d] text-white px-6 py-3 rounded-full hover:bg-[#828282] transition">
           Get Started
         </button>
