--- a/templates/getStarted.html
+++ b/templates/getStarted.html
@@ -43,6 +43,7 @@
       <a href="index.html" class="text-white hover:text-gray-400 transition">How It Works</a>
       <a href="ourGoal.html" class="text-white hover:text-gray-400 transition">Our Goal</a>
       <a href="getStarted.html" class="text-white hover:text-gray-400 transition">Get Started</a>
+      <a href="demo.html" class="text-white hover:text-gray-400 transition">Demo</a>
     </div>
   </nav>
 
@@ -60,11 +61,14 @@
             <!-- Text and Button on the right -->
             <div class="text-white text-left max-w-xl">
             <p class="text-lg mb-6">
-                Press 'run code' to begin the code execution!
+                Please download the following two files:
             </p>
-            <button class="bg-[#4f4d4d] text-white px-6 py-3 rounded-full hover:bg-[#828282] transition">
-                Run Code
-            </button>
+            <a href="requirements.zip" download="requirements.txt" class="bg-[#4f4d4d] text-white px-6 py-3 rounded-full hover:bg-[#828282] transition inline-block text-center">
+              DOWNLOAD REQUIREMENTS
+            </a>
+            <a href="majorTest2.zip" download="majorTest2.py" class="bg-[#4f4d4d] text-white px-6 py-3 rounded-full hover:bg-[#828282] transition inline-block text-center">
+              DOWNLOAD PROGRAM
+            </a>
             </div>
         </div>
     </section>
